--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       overflow-x:hidden;
     }
 
+    /* ===== AUTH CARD ===== */
     .authWrap{
       min-height:100vh;
       display:flex;
@@ -147,6 +148,7 @@
     .fileName{ font-size:12px; color: var(--muted); white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
     .hint{ font-size: 12px; color: var(--muted); line-height:1.35; }
 
+    /* ===== GAME SHELL ===== */
     .shell{
       display:none;
       min-height:100vh;
@@ -181,6 +183,7 @@
     }
     .panel > *{ position:relative; z-index:1; }
 
+    /* Left sidebar */
     .sidebar{
       padding: 14px;
       display:flex;
@@ -210,6 +213,14 @@
 
     .pNick{ font-weight:950; font-size:14px; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
     .pLogin{ margin-top:6px; font-size:12px; color: var(--muted); white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
+
+    /* Рулетка + 4 кнопки справа */
+    .rouletteRow{
+      display:grid;
+      grid-template-columns: 1fr 160px;
+      gap: 12px;
+      align-items:stretch;
+    }
 
     .rouletteBtn{
       margin-top: 10px;
@@ -252,6 +263,37 @@
       padding: 0 18px;
     }
 
+    .sideGrid{
+      margin-top: 10px;
+      display:grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+    }
+
+    .sideBtn{
+      border-radius: 16px;
+      border: 2px solid rgba(43,255,43,.55);
+      background:
+        radial-gradient(circle at 30% 30%, rgba(43,255,43,.18), transparent 55%),
+        rgba(255,255,255,.04);
+      color: rgba(255,255,255,.92);
+      font-weight: 950;
+      font-size: 12px;
+      text-transform: uppercase;
+      letter-spacing: .08em;
+      cursor:pointer;
+      user-select:none;
+      box-shadow: 0 12px 28px rgba(0,0,0,.22);
+      transition: .14s transform, .14s box-shadow, .14s border-color;
+    }
+
+    .sideBtn:hover{
+      transform: translateY(-1px);
+      border-color: rgba(43,255,43,.9);
+      box-shadow: 0 0 22px rgba(43,255,43,.18), 0 18px 45px rgba(0,0,0,.35);
+    }
+    .sideBtn:active{ transform: translateY(0px) scale(.99); }
+
     .sideActions{
       display:flex; gap:10px;
     }
@@ -270,6 +312,7 @@
     }
     .miniBtn:hover{ transform: translateY(-1px); border-color: rgba(43,255,43,.35); box-shadow:0 0 18px rgba(43,255,43,.12); }
 
+    /* Main */
     .main{
       padding: 14px;
       min-height: 520px;
@@ -304,6 +347,7 @@
     }
     .navBtn:hover{ transform: translateY(-1px); border-color: rgba(43,255,43,.35); box-shadow:0 0 18px rgba(43,255,43,.10); }
 
+    /* Market — выделенный */
     .navBtn.market{
       border-color: rgba(43,255,43,.65);
       background: linear-gradient(135deg, rgba(43,255,43,.22), rgba(102,170,255,.12));
@@ -324,6 +368,7 @@
       50%{ opacity:1; transform: translateX(6px); }
     }
 
+    /* Online bubble (правый верх) */
     .onlinePill{
       border-radius: 999px;
       width: 58px;
@@ -342,6 +387,7 @@
       z-index: 5;
     }
 
+    /* ===== История: 10 строк, кружок + текст ровно ===== */
     .history{
       margin-top: 12px;
       border-radius: 22px;
@@ -349,16 +395,22 @@
       background: rgba(255,255,255,.02);
       min-height: 420px;
       padding: 12px;
-      display:flex;
+      display:block;
+    }
+
+    .historyGrid{
+      display:grid;
+      grid-template-columns: 44px 1fr;
       gap: 12px;
+      align-items:start;
     }
 
     .dots{
-      width: 44px;
-      padding-top: 10px;
+      width:auto;
+      padding-top: 0;
       display:flex;
       flex-direction:column;
-      gap: 14px;
+      gap: 10px;
       align-items:center;
       flex:none;
     }
@@ -376,28 +428,27 @@
       display:flex;
       flex-direction:column;
       gap: 10px;
-      padding: 8px 8px 8px 0;
+      padding: 0;
       max-height: 520px;
       overflow:auto;
     }
+
     .hItem{
       border-radius: 16px;
       border: 1px solid rgba(255,255,255,.10);
       background: rgba(255,255,255,.04);
-      padding: 10px 12px;
+      padding: 8px 12px;
       box-shadow: 0 12px 30px rgba(0,0,0,.22);
-    }
-    .hTop{
+      min-height: 34px;
       display:flex;
-      justify-content:space-between;
-      gap: 10px;
-      font-size: 12px;
-      color: var(--muted);
+      align-items:center;
     }
+    .hTop{ display:none; }
     .hText{
-      margin-top: 6px;
+      margin-top: 0;
       font-weight: 900;
       letter-spacing:.02em;
+      line-height: 1.1;
     }
 
     .toast{
@@ -424,15 +475,20 @@
 
     @media (max-width: 980px){
       .layout{ grid-template-columns: 1fr; }
+      .onlinePill{ position: fixed; }
       .rouletteBtn{ height: 150px; }
+      .rouletteRow{ grid-template-columns: 1fr; }
+      .sideGrid{ grid-template-columns: 1fr 1fr; }
     }
   </style>
 </head>
 
 <body>
 
+  <!-- ONLINE -->
   <div class="onlinePill" title="Онлайн" id="onlinePill">—</div>
 
+  <!-- AUTH -->
   <div class="authWrap" id="authWrap">
     <div class="card">
       <div class="title">GAME AUTH</div>
@@ -443,12 +499,14 @@
         <button class="tab" id="tReg" type="button">Регистрация</button>
       </div>
 
+      <!-- LOGIN -->
       <div class="form" id="loginForm">
         <input class="field" id="loginL" placeholder="Логин" autocomplete="username" />
         <input class="field" id="passL" placeholder="Пароль" type="password" autocomplete="current-password" />
         <button class="btn" id="loginBtn" type="button">Войти</button>
       </div>
 
+      <!-- REGISTER -->
       <div class="form" id="regForm" style="display:none;">
         <div class="row">
           <input class="field" id="loginR" placeholder="Логин (лат/цифры/_)" autocomplete="username" />
@@ -468,11 +526,14 @@
     </div>
   </div>
 
+  <!-- SHELL -->
   <div class="shell" id="shell">
     <div class="layout">
+      <!-- LEFT -->
       <div class="panel">
         <div class="sidebar">
 
+          <!-- 2/3/4 -->
           <div class="profileBox">
             <div class="ava"><img id="shellAvatar" alt="avatar" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='160' height='160'%3E%3Crect width='160' height='160' fill='%2310111a'/%3E%3Ctext x='50%25' y='56%25' dominant-baseline='middle' text-anchor='middle' font-size='56' fill='white' fill-opacity='.75' font-family='Arial'%3E%3F%3C/text%3E%3C/svg%3E" /></div>
             <div>
@@ -481,8 +542,18 @@
             </div>
           </div>
 
-          <div class="rouletteBtn" id="spinBtn">
-            <div class="label">Прокрутить<br/>рулетку</div>
+          <!-- 1 + новые кнопки -->
+          <div class="rouletteRow">
+            <div class="rouletteBtn" id="spinBtn">
+              <div class="label">Прокрутить<br/>рулетку</div>
+            </div>
+
+            <div class="sideGrid">
+              <button class="sideBtn" id="btnBonus" type="button">Бонус</button>
+              <button class="sideBtn" id="btnRoulette" type="button">Рулетка</button>
+              <button class="sideBtn" id="btnChance" type="button">Шанс</button>
+              <button class="sideBtn" id="btnProfile" type="button">Профиль</button>
+            </div>
           </div>
 
           <div class="sideActions">
@@ -496,6 +567,7 @@
         </div>
       </div>
 
+      <!-- MAIN -->
       <div class="panel">
         <div class="main">
           <div class="topRow">
@@ -506,9 +578,12 @@
             </div>
           </div>
 
+          <!-- 6 -->
           <div class="history">
-            <div class="dots" id="dotsCol"></div>
-            <div class="historyList" id="historyList"></div>
+            <div class="historyGrid">
+              <div class="dots" id="dotsCol"></div>
+              <div class="historyList" id="historyList"></div>
+            </div>
           </div>
         </div>
       </div>
@@ -521,6 +596,7 @@
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   <script>
   (function(){
+    // === Supabase ===
     var SUPABASE_URL = "https://qjbhflpoelgusfhymipi.supabase.co";
     var SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFqYmhmbHBvZWxndXNmaHltaXBpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ4NzEzODMsImV4cCI6MjA4MDQ0NzM4M30.OUBE062cKr4p4KpKlZlWIYCmqCBpXK43tQq9m-laDfg";
 
@@ -543,6 +619,8 @@
     var clearHistoryBtn = $("clearHistoryBtn");
 
     var btnMarket = $("btnMarket"), btnMyItems = $("btnMyItems"), btnGames = $("btnGames");
+    var btnBonus = $("btnBonus"), btnRoulette = $("btnRoulette"), btnChance = $("btnChance"), btnProfile = $("btnProfile");
+
     var historyList = $("historyList");
     var dotsCol = $("dotsCol");
 
@@ -587,6 +665,7 @@
       localStorage.removeItem("game_user");
     }
 
+    // ===== History (local) =====
     function loadHistory(){
       try{ return JSON.parse(localStorage.getItem("game_history") || "[]"); }
       catch(e){ return []; }
@@ -597,20 +676,9 @@
     function addHistoryItem(text){
       var arr = loadHistory();
       arr.unshift({ at: new Date().toISOString(), text: text });
-      if (arr.length > 50) arr = arr.slice(0,50);
+      if (arr.length > 10) arr = arr.slice(0,10);
       saveHistory(arr);
       renderHistory();
-    }
-    function fmtTime(iso){
-      try{
-        var d = new Date(iso);
-        var hh = String(d.getHours()).padStart(2,"0");
-        var mm = String(d.getMinutes()).padStart(2,"0");
-        var ss = String(d.getSeconds()).padStart(2,"0");
-        return hh+":"+mm+":"+ss;
-      }catch(_){
-        return "";
-      }
     }
 
     function renderHistory(){
@@ -618,7 +686,7 @@
       historyList.innerHTML = "";
       dotsCol.innerHTML = "";
 
-      var showDots = Math.min(6, Math.max(1, arr.length));
+      var showDots = Math.max(1, Math.min(10, arr.length));
       for (var i=0;i<showDots;i++){
         var dot = document.createElement("div");
         dot.className = "dot";
@@ -628,7 +696,7 @@
       if (!arr.length){
         var empty = document.createElement("div");
         empty.className = "hItem";
-        empty.innerHTML = '<div class="hTop"><span>История</span><span>—</span></div><div class="hText">Пока пусто. Нажми “Прокрутить рулетку”.</div>';
+        empty.innerHTML = '<div class="hText">Пока пусто. Нажми “Прокрутить рулетку”.</div>';
         historyList.appendChild(empty);
         return;
       }
@@ -637,9 +705,7 @@
         var it = arr[k];
         var el = document.createElement("div");
         el.className = "hItem";
-        el.innerHTML =
-          '<div class="hTop"><span>Действие</span><span>'+fmtTime(it.at)+'</span></div>' +
-          '<div class="hText">'+escapeHtml(it.text)+'</div>';
+        el.innerHTML = '<div class="hText">'+escapeHtml(it.text)+'</div>';
         historyList.appendChild(el);
       }
     }
@@ -650,12 +716,14 @@
       });
     }
 
+    // ===== Supabase init =====
     if (!window.supabase || !window.supabase.createClient){
       setMsg("Supabase SDK не загрузился (CDN).");
       return;
     }
     var supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
+    // ===== Password hash (SHA-256) =====
     async function sha256(text){
       var enc = new TextEncoder().encode(text);
       var buf = await crypto.subtle.digest("SHA-256", enc);
@@ -663,25 +731,21 @@
       return arr.map(function(b){ return b.toString(16).padStart(2,"0"); }).join("");
     }
 
+    // ===== Avatar upload =====
     async function uploadAvatar(file){
-      try{
-        var ext = (file.name.split(".").pop() || "png").toLowerCase();
-        var path = "public/" + Date.now() + "_" + Math.random().toString(16).slice(2) + "." + ext;
+      var ext = (file.name.split(".").pop() || "png").toLowerCase();
+      var path = "public/" + Date.now() + "_" + Math.random().toString(16).slice(2) + "." + ext;
 
-        var up = await supabase.storage.from("avatars")
-          .upload(path, file, { upsert: true, contentType: file.type });
+      var up = await supabase.storage.from("avatars")
+        .upload(path, file, { upsert: true, contentType: file.type });
 
-        if (up.error) throw up.error;
+      if (up.error) throw up.error;
 
-        var pub = supabase.storage.from("avatars").getPublicUrl(path);
-        return pub && pub.data ? pub.data.publicUrl : null;
-      }catch(e){
-        // если bucket не создан — просто вернём null
-        console.warn("Avatar upload skipped:", e?.message || e);
-        return null;
-      }
+      var pub = supabase.storage.from("avatars").getPublicUrl(path);
+      return pub && pub.data ? pub.data.publicUrl : null;
     }
 
+    // ===== DB helpers =====
     async function getUserByLogin(loginLower){
       var res = await supabase.from("game_users")
         .select("id,login,nick,pass_hash,avatar_url")
@@ -691,31 +755,16 @@
       return res.data || null;
     }
 
-    async function loginExists(loginLower){
-      var res = await supabase.from("game_users")
-        .select("id")
-        .eq("login", loginLower)
-        .limit(1);
+    async function existsByField(field, value){
+      var q = supabase.from("game_users").select("id").limit(1);
+      if (field === "login") q = q.eq("login", value);
+      else q = q.ilike("nick", value); // case-insensitive
+      var res = await q;
       if (res.error) throw res.error;
-      return (res.data && res.data.length > 0);
+      return res.data && res.data.length > 0;
     }
 
-    async function nickExistsCaseInsensitive(nick){
-      // корректная проверка: lower(nick) == lower(input)
-      var lowered = (nick || "").toLowerCase();
-      var res = await supabase.from("game_users")
-        .select("id,nick")
-        .limit(200); // у тебя пользователей пока мало
-      if (res.error) throw res.error;
-
-      var rows = res.data || [];
-      for (var i=0;i<rows.length;i++){
-        var n = (rows[i].nick || "").toLowerCase();
-        if (n === lowered) return true;
-      }
-      return false;
-    }
-
+    // ===== Online presence =====
     var onlineTimer = null;
 
     async function heartbeatOnline(user){
@@ -725,9 +774,9 @@
           login: user.login,
           nick: user.nick,
           last_seen: new Date().toISOString()
-        }, { onConflict: "user_id" });
+        });
       }catch(e){
-        // если таблицы нет/прав нет — молчим
+        // таблицы может не быть — ок
       }
     }
 
@@ -754,6 +803,7 @@
       }, 15000);
     }
 
+    // ===== UI switch =====
     function showShell(user){
       authWrap.style.display = "none";
       shell.style.display = "block";
@@ -776,6 +826,7 @@
       onlineTimer = null;
     }
 
+    // ===== events =====
     tLogin.onclick = function(){ showTab("login"); };
     tReg.onclick = function(){ showTab("reg"); };
 
@@ -787,7 +838,6 @@
 
     loginBtn.onclick = async function(){
       setMsg("");
-      loginBtn.disabled = true;
       try{
         var login = (loginL.value || "").trim().toLowerCase();
         var pass = passL.value || "";
@@ -806,14 +856,11 @@
       }catch(e){
         console.error(e);
         setMsg(e && e.message ? e.message : String(e));
-      }finally{
-        loginBtn.disabled = false;
       }
     };
 
     regBtn.onclick = async function(){
       setMsg("");
-      regBtn.disabled = true;
       try{
         var login = (loginR.value || "").trim().toLowerCase();
         var nick = (nickR.value || "").trim();
@@ -824,11 +871,14 @@
         if (!validLogin(login)){ setMsg("Логин: 3–20 символов, только латиница/цифры/_"); return; }
         if (pass.length < 6){ setMsg("Пароль минимум 6 символов"); return; }
 
-        if (await loginExists(login)){ setMsg("Такой логин уже занят"); return; }
-        if (await nickExistsCaseInsensitive(nick)){ setMsg("Такой ник уже занят"); return; }
+        if (await existsByField("login", login)){ setMsg("Такой логин уже занят"); return; }
+        if (await existsByField("nick", nick)){ setMsg("Такой ник уже занят"); return; }
 
         var avatarUrl = null;
-        if (file) avatarUrl = await uploadAvatar(file);
+        if (file){
+          try{ avatarUrl = await uploadAvatar(file); }
+          catch(err){ console.error(err); }
+        }
 
         var hash = await sha256(pass);
 
@@ -853,8 +903,6 @@
       }catch(e){
         console.error(e);
         setMsg(e && e.message ? e.message : String(e));
-      }finally{
-        regBtn.disabled = false;
       }
     };
 
@@ -883,10 +931,16 @@
       toastShow(x);
     };
 
+    btnBonus.onclick = function(){ addHistoryItem("Открыто: Бонус"); toastShow("Бонус"); };
+    btnRoulette.onclick = function(){ addHistoryItem("Открыто: Рулетка"); toastShow("Рулетка"); };
+    btnChance.onclick = function(){ addHistoryItem("Открыто: Шанс"); toastShow("Шанс"); };
+    btnProfile.onclick = function(){ addHistoryItem("Открыто: Профиль"); toastShow("Профиль"); };
+
     btnMarket.onclick = function(){ addHistoryItem("Открыт: Рынок предметов"); toastShow("Рынок предметов"); };
     btnMyItems.onclick = function(){ addHistoryItem("Открыто: Мои предметы"); toastShow("Мои предметы"); };
     btnGames.onclick = function(){ addHistoryItem("Открыто: Игры"); toastShow("Игры"); };
 
+    // init
     (function(){
       var s = loadSession();
       if (s && s.login) showShell(s);
