--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>WORLD_SCRIPT</title>
-  <link rel="icon" type="image/png" href="icon_world.ico">
-  <link rel="apple-touch-icon" href="icon_world.ico">
+  <link rel="icon" type="image/png" href="IconWorld.png">
+  <link rel="apple-touch-icon" href="IconWorld.png">
 
   <style>
     :root{
